# owlRobotPlatform

./: README.md
cpp/: mylib.h
cpp/python/: build.sh  mylib.py  mylib_swig.i  tasks.py  test.py
firmware/owlController_RP2040_00/: DYP_A22.cpp  DYP_A22.h  Funkt.cpp  Funkt.h  NeoPix.cpp  NeoPix.h  can.cpp  cmd.cpp  cmd.h  comparser.h  config.h  joystick.h  mpu.h  oledDisp.cpp  owlController_RP2040_00.ino  owlcan.h  owlcontrol.cpp  owlcontrol.h  pid.cpp  slcan.cpp  slcan.h  verify_local_libraries.sh  watchdog.h
owlController_RP2040_00/: DYP_A22.cpp  DYP_A22.h  Funkt.cpp  Funkt.h  NeoPix.cpp  NeoPix.h  RunningMedian.h  can.cpp  can.h  cmd.cpp  comparser.cpp  config.h  fifo.h  joystick.cpp  mcp2515.cpp  mcp2515.h  mpu.cpp  oledDisp.cpp  oledDisp.h  owlController_RP2040_00.ino  owlcan.h  owlcontrol.cpp  owlcontrol.h  owldrive.cpp  owldrive.h  pid.h  robot.cpp  robot.h  slcan.cpp  slcan.h  watchdog.cpp
python/: ble_server.py  ble_server2.py  config.py  dabble.py  detect_object.py  diffdrive.py  mecanum.py  owlrobot.py  run_ble_server.sh  service.sh
python/misc/: ble_server.service  device1.json
python/test/: testasync.py  testbluetooth.py  testcan.py  testcanasync.py  testgatt.py
ros/src/owlrobot_node/: CMakeLists.txt  package.xml
ros/src/owlrobot_node/launch/: bringup.launch
ros/src/owlrobot_node/src/: owlrobot_node.py
tools/flash/: flash.sh  owlController_RP2040_00.ino.uf2  owldrive_v42.uf2  owldrive_v43.uf2  owldrive_v44.uf2  owldrive_v45.uf2  picoFlashTool_Linux
tools/orangepi5pro/: orangepi5pro_conf.sh
tools/owldrive_service/: README.md  (+1 more)
(+28 files in other folders)
